--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
         run: docker-compose up -d
 
       - name: Test
-        run: docker-compose run --rm app /bin/bash -c "yarn && yarn test"
+        run: docker-compose run --rm package /bin/bash -c "yarn && yarn test"
