--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,10 +32,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      # - name: Push package
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     docker-compose build
+      #     docker-compose run package /bin/bash -c "echo -e \"//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}\n@tktcorporation:registry=https://npm.pkg.github.com\nalways-auth=true\" > .npmrc && yarn && yarn publish --non-interactive"
 
-      - name: Push package
+      # Setup .npmrc file to publish to GitHub Packages
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+          registry-url: "https://npm.pkg.github.com"
+          # Defaults to the user or organization that owns the workflow file
+          scope: "@tktcorporation"
+      - run: yarn
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker-compose build
-          docker-compose run package /bin/bash -c "echo -e \"//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}\n@tktcorporation:registry=https://npm.pkg.github.com\nalways-auth=true\" > .npmrc && yarn && yarn publish --non-interactive"
