--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,10 +43,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "14.x"
-          registry-url: "https://npm.pkg.github.com"
-          # Defaults to the user or organization that owns the workflow file
-          scope: "@tktcorporation"
+          registry-url: "https://registry.npmjs.org"
       - run: yarn
-      - run: npm publish
+      - run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
