--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "type-query-builder",
-  "version": "0.0.1",
+  "version": "0.0.2-0",
   "description": "",
   "main": "dist/index.js",
   "repository": {
